@@ -77,7 +77,7 @@
   </div>
 </div>
 <div id="footer">
-  <div class="footer">&copy; Copyright 2008-2011, Agendaless Consulting.</div>
+  <div class="footer">&copy; Copyright 2008-2012, Erkan Ozgur Yilmaz.</div>
 </div>
 </body>
 </html>
